# Chess

./: CMakeLists.txt  README.md  main.cpp  sfml-app
src/: Main.cpp
src/Chessboard/: Chessboard.cpp  Chessboard.hpp
src/Chessboard/Board/: Board.cpp  Board.hpp  ClickDetector.hpp
src/Chessboard/CheckmateDetector/: CheckmateDetector.cpp
src/Chessboard/ChessEngine/: ChessEngine.cpp  ChessEngine.hpp
src/Chessboard/ChessPiece/: СhessPieceTest.hpp
src/Chessboard/ChessTimer/: ChessTimer.cpp  ChessTimer.hpp
src/Chessboard/Piece/: Piece.cpp  Piece.hpp  PieceTextures.cpp  PieceTextures.hpp
src/Interface/: Button.hpp
src/Interface/src/: Button.cpp
src/Menu/: Menu.cpp  Menu.hpp  TimeMenu.cpp  TimeMenu.hpp
